--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
@@ -3,8 +3,8 @@
         <div class="col-md-12">
             <ol class="breadcrumb">
                 <li>
-                    <span *ngIf="this.breadcrumbParams != null"><a [routerLink]="['/pe/firmSearch', {params: this.breadcrumbParams}]">Private Equity</a></span>
-                    <span *ngIf="this.breadcrumbParams == null"><a [routerLink]="['/pe/firmSearch']">Private Equity</a></span>
+                    <span *ngIf="this.breadcrumbParams != null"><a [routerLink]="['/pe/firmSearch', {params: this.breadcrumbParams}]">Firm Search</a></span>
+                    <span *ngIf="this.breadcrumbParams == null"><a [routerLink]="['/pe/firmSearch']">Firm Searchf</a></span>
                 </li>
                 <li class="active">Firm profile</li>
             </ol>
@@ -255,17 +255,17 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="row">
-                                        <div class="col-md-12">
-                                            <div class="col-md-6">
-                                                <div class="form-group">
-                                                    <label for="fundName">Fund</label>
-                                                    <input type="text" class="form-control" id="fundName" placeholder="Enter fund name..."
-                                                           [(ngModel)]="memoSearchParams.fundName"/>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <!--<div class="row">-->
+                                        <!--<div class="col-md-12">-->
+                                            <!--<div class="col-md-6">-->
+                                                <!--<div class="form-group">-->
+                                                    <!--<label for="fundName">Fund</label>-->
+                                                    <!--<input type="text" class="form-control" id="fundName" placeholder="Enter fund name..."-->
+                                                           <!--[(ngModel)]="memoSearchParams.fundName"/>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
                                     <br/>
                                     <div class="row">
                                         <div class="col-md-12">
@@ -290,7 +290,7 @@
                                         <thead>
                                         <tr>
                                             <th>MEETING/CALL</th>
-                                            <th>FIRM</th>
+                                            <!--<th>FIRM</th>-->
                                             <th>FUND</th>
                                             <th>DATE</th>
                                             <th>AUTHOR</th>
@@ -301,13 +301,13 @@
                                         <tbody>
                                         <tr *ngFor = "let memo of memoList" style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">
                                             <td width="10%" >{{memo.meetingType}}</td>
-                                            <td width="30%"><a style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">{{memo.firmName}}</a></td>
-                                            <td width="30%"><a style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">{{memo.fundName}}</a></td>
+                                            <!--<td width="30%"><a style="cursor: pointer" (click)="navigate(memo.memoType, memo.id)">{{memo.firmName}}</a></td>-->
+                                            <td width="30%">{{memo.fundName}}</td>
                                             <!--<td width="10%" th:text="${memoItem.meetingDate}"></td>-->
                                             <td width="10%">{{memo.meetingDate}}</td>
-                                            <td width="10%">{{memo.author}}</td>
+                                            <td width="10%">{{memo.owner}}</td>
                                             <td width="5%">
-                                                <a><i class="glyphicon glyphicon-trash"></i></a>
+                                                <!--<a><i class="glyphicon glyphicon-trash"></i></a>-->
                                             </td>
                                         </tr>
                                         </tbody>
