--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-search.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-search.component.html
@@ -36,9 +36,9 @@
             <div class="col-md-12">
                 <div class="col-md-9">
                     <div class="form-group">
-                        <label for="firmName">Manager name</label>
+                        <label for="firmName">Firm name</label>
                         <input type="text" class="form-control" id="firmName" [(ngModel)]="searchParams.name"
-                               placeholder="Enter manager..."
+                               placeholder="Enter firm name..."
                         />
                     </div>
                 </div>
