--- a/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.fund-profile.component.html
@@ -2,7 +2,7 @@
     <div class="row top-buffer" >
         <div class="col-md-12">
             <ol class="breadcrumb">
-                <li><a [routerLink]="['/pe/firmSearch']">Private Equity</a></li>
+                <li><a [routerLink]="['/pe/firmSearch']">Firm Search</a></li>
                 <li><a [routerLink]="['/pe/firmProfile',fund?.firm?.id]">Firm profile</a></li>
                 <li class="active">Fund profile</li>
             </ol>
