--- a/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-edit.component.html
@@ -157,7 +157,7 @@
                                                                     fileName="{{attachment?.fileName}}">
                                         </memo-attachment-downloader>
 
-                                        <a (click)="deleteAttachment(attachment.id)">
+                                        <a (click)="deleteAttachment(attachment.id)" *ngIf="canEdit()">
                                             <i class="glyphicon glyphicon-trash"></i>
                                         </a>
                                     </div>
@@ -175,7 +175,7 @@
                     </div>
                     <div class="row top-buffer">
                         <div class="col-md-12">
-                            <button type="submit" class="btn btn-success pull-right" name="saveMemo" [disabled]="!tripmemoForm.form.valid" *ngIf="showSaveButton()">Save</button>
+                            <button type="submit" class="btn btn-success pull-right" name="saveMemo" [disabled]="!tripmemoForm.form.valid" *ngIf="canEdit()">Save</button>
                         </div>
                     </div>
                 </form>
