--- a/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
+++ b/nicnbk-ui-angular2/src/app/pe/view/pe.firm-profile.component.html
@@ -4,7 +4,7 @@
             <ol class="breadcrumb">
                 <li>
                     <span *ngIf="this.breadcrumbParams != null"><a [routerLink]="['/pe/firmSearch', {params: this.breadcrumbParams}]">Firm Search</a></span>
-                    <span *ngIf="this.breadcrumbParams == null"><a [routerLink]="['/pe/firmSearch']">Firm Searchf</a></span>
+                    <span *ngIf="this.breadcrumbParams == null"><a [routerLink]="['/pe/firmSearch']">Firm Search</a></span>
                 </li>
                 <li class="active">Firm profile</li>
             </ol>
