--- a/nicnbk-ui-angular2/src/app/app.component.html
+++ b/nicnbk-ui-angular2/src/app/app.component.html
@@ -111,7 +111,7 @@
                         <!--<li><a href="#">Forward Calendar</a></li>-->
                     </ul>
                 </li>
-                <li [routerLinkActive]="['active']" *ngIf="showRealEstate()"><a href="#">Real Estate</a></li>
+                <!--<li [routerLinkActive]="['active']" *ngIf="showRealEstate()"><a href="#">Real Estate</a></li>-->
                 <!--<li [routerLinkActive]="['active']" ><a href="#">Hedge Funds</a></li>-->
                 <!--<li [routerLinkActive]="['active']" class="dropdown" *ngIf="showHedgeFunds()">-->
                 <li [routerLinkActive]="['active']"  class="dropdown" *ngIf="showHedgeFunds()">
