--- a/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-list.component.html
+++ b/nicnbk-ui-angular2/src/app/tripMemo/view/trip-memo-list.component.html
@@ -130,6 +130,7 @@
                 <th>LOCATION</th>
                 <th>DATE FROM</th>
                 <th>DATE TO</th>
+                <th>AUTHOR</th>
                 <!--<th>STATUS</th>-->
                 <th>ACTIONS</th>
             </tr>
@@ -144,9 +145,10 @@
                 <td width="10%">{{tripMemo.meetingDateStart}}</td>
                 <td width="10%">{{tripMemo.meetingDateEnd}}</td>
 
+                <td width="10%">{{tripMemo.owner}}</td>
                 <!--<td width="10%">{{tripMemo.status}}</td>-->
                 <td width="5%">
-                    <a><i class="glyphicon glyphicon-trash"></i></a>
+                    <!--<a><i class="glyphicon glyphicon-trash"></i></a>-->
                 </td>
             </tr>
             </tbody>
